Makefile.am fix. Sender update

--- a/gloox-ft-test/Makefile.am
+++ b/gloox-ft-test/Makefile.am
@@ -1,5 +1,4 @@
-
-ACLOCAL_AMFLAGS = `mkdir m4` -I m4 --install
+ACLOCAL_AMFLAGS = `test -d m4 || mkdir m4` `test -f README || cp README.mediawiki README` -I m4 --install
 
 SUBDIRS = \
 	src
@@ -8,5 +7,6 @@ EXTRADIST = \
 	AUTHORS \
 	ChangeLog \
 	NEWS \
+	README \
 	README.mediawiki \
 	TODO
